--- a/src/app/applicant-components/applicant-instructor-list/applicant-instructor-list.component.html
+++ b/src/app/applicant-components/applicant-instructor-list/applicant-instructor-list.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-7">
   <div class="col-md-3 mt-4" *ngFor="let instructor of instructors">
     <div class="card">
-      <img class="card-img-top" src="https://pbs.twimg.com/profile_images/1404479261566713856/_MklDkhx_400x400.jpg">
+      <img class="card-img-top" src="{{instructor.image}}">
       <div class="position-relative"
         style="height: 50px;overflow: hidden;margin-top: -50px;z-index:2;position: relative;">
         <div class="position-absolute w-100 top-0" style="z-index: 1;">
