--- a/src/app/components/instructor/create-instructor/create-instructor.component.html
+++ b/src/app/components/instructor/create-instructor/create-instructor.component.html
@@ -1,12 +1,12 @@
 
- <div class="container-fluid py-4"> 
+ <div class="container-fluid py-4">
   <div class="row">
     <div class="col-12">
       <div class="card mb-4">
         <div class="card-header pb-0">
           <h6 style="float:left; font-size: 2rem;"  >Eğitmen Listesi <button type="button"  class="btn btn-success btn-lg "
             routerLink="add-instructor">Eğitmen ekle</button> </h6>
-       
+
         </div>
         <div class="card-body px-0 pt-0 pb-2">
           <div class="table-responsive p-0">
@@ -18,6 +18,7 @@
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Soyad</th>
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">E-mail</th>
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Şifre</th>
+                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Görsel URL</th>
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Kimlik No</th>
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Doğum Tarihi</th>
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Şirket Adı</th>
@@ -28,7 +29,7 @@
               </thead>
               <tbody *ngFor="let instructor of instructors" class="text-center">
                 <tr>
-                  
+
                   <td class="align-middle text-center text-sm">
                     <span class="mb-0 text-sm">{{instructor.id}}</span>
                   </td>
@@ -48,6 +49,11 @@
                   <td class="align-middle">
                     <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                       {{instructor.password}}
+                    </a>
+                  </td>
+                  <td class="align-middle">
+                    <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                      {{instructor.image}}
                     </a>
                   </td>
                   <td class="align-middle">
@@ -74,10 +80,10 @@
                       routerLink="update-instructor/{{instructor.id}}">Düzenle</button>
                     <button type="button" class="btn btn-danger mx-3"  (click)="delete(instructor)">Sil</button>
                   </div>
-          
+
                 </td>
                 </tr>
-                
+
               </tbody>
             </table>
           </div>
