--- a/src/app/instructor-components/instructor-list/instructor-list.component.html
+++ b/src/app/instructor-components/instructor-list/instructor-list.component.html
@@ -2,7 +2,7 @@
     <div class="row">
 <div class="col-md-4 mt-8" *ngFor="let instructor of instructors">
   <div class="card x">
-    <img class="card-img-top" src={{instructor.img}}>
+    <img class="card-img-top" src={{instructor.image}}>
     <div class="position-relative" style="height: 50px;overflow: hidden;margin-top: -50px;z-index:2;position: relative;">
       <div class="position-absolute w-100 top-0" style="z-index: 1;">
           <svg class="waves waves-sm" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 40" preserveAspectRatio="none" shape-rendering="auto">
@@ -21,13 +21,13 @@
         </div>
     </div>
     <div class="card-body">
-        
+
         <ul style="list-style: none; padding-left:0;">
             <li> <strong>Adı : </strong>  {{instructor.firstName}}  {{instructor.lastName}} </li>
             <li> <strong>E-mail : </strong> {{instructor.email}}</li>
             <li> <strong>Doğum Tarihi: </strong> {{instructor.dateOfBirth}}</li>
             <li> <strong>Şirketi:  </strong> {{instructor.companyName}}</li>
-            
+
         </ul>
 
     </div>
