--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -6,6 +6,7 @@
   
   <div class="container-fluid py-4">
     <router-outlet></router-outlet>  
+    <button (click)="logout()">selamun aleykümn</button>
   </div>
 </main>
 
