--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <router-outlet></router-outlet>
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3">
+<!--navbar start-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3 ">
   <div class="container ">
-    <a class="navbar-brand " href="" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom"
+    <a class="navbar-brand " name="home" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom"
       target="_blank">
       <h4 class="text-light">Pair 4 Academy</h4>
     </a>
@@ -17,7 +17,7 @@
 
             <a class="text-white cursor-pointer">
               <li class="nav-item d-flex align-items-center">
-                <a href="javascript:;" class="nav-link text-body font-weight-bold">
+                <a href="#bootcampler" class="nav-link text-body font-weight-bold">
                   <span class="d-sm-inline d-none text-light">BOOTCAMPLER </span>
                 </a>
               </li>
@@ -90,7 +90,7 @@
 
 <!-- carousel  -->
 
-<div class="container">
+<div class="container ">
   <div class="row">
     <div class="col-md-12">
 
@@ -323,7 +323,7 @@
 </div>
 <!-- carousel end  -->
 
-<section class="bg-gradient-light mt-5" style="padding: 100px 0;">
+<section class="bg-gradient-light mt-5 shadow" style="padding: 100px 0;">
   <div class="container">
     <div class="col-12 text-center ">
       <h3 class="mb-4"> Neden Pair 4 Academy ? </h3>
@@ -356,8 +356,8 @@
       <div class="info-horizontal  border-radius-xl p-5">
         <div class="row mt-2">
           <div class="col-md-3">
-            <div class="card">
-              <img class="card-img-top"
+            <div class="card h-100">
+              <img class="card-img-top size h-70"
                 src="https://pbs.twimg.com/profile_images/1404479261566713856/_MklDkhx_400x400.jpg">
               <div class="position-relative"
                 style="height: 50px;overflow: hidden;margin-top: -50px;z-index:2;position: relative;">
@@ -394,9 +394,9 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card">
-              <img class="card-img-top"
-                src="https://pbs.twimg.com/profile_images/1404479261566713856/_MklDkhx_400x400.jpg">
+            <div class="card h-100">
+              <img class="card-img-top size h-100"
+                src="https://i.ibb.co/dJgqkdQ/0dc86408-5f16-4c08-8615-e42327f78525.jpg">
               <div class="position-relative"
                 style="height: 50px;overflow: hidden;margin-top: -50px;z-index:2;position: relative;">
                 <div class="position-absolute w-100 top-0" style="z-index: 1;">
@@ -420,10 +420,10 @@
               </div>
               <div class="card-body">
                 <h4>
-                  Engin Demiroğ
+                  Enes Bin Malik Köksal
                 </h4>
                 <p>
-                  Kodlama.io
+                  Çalışma ve Sosyal Güvenlik Eğitim Uzman yardımcısı
 
                 </p>
                 <!-- <a href="javascript:;" class="text-primary icon-move-right">More about us
@@ -433,9 +433,9 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card">
-              <img class="card-img-top"
-                src="https://pbs.twimg.com/profile_images/1404479261566713856/_MklDkhx_400x400.jpg">
+            <div class="card h-100">
+              <img class="card-img-top h-35"
+                src="https://i.ibb.co/brfMGYN/1577f867-7520-43f1-87c4-d72ab84dca09.jpg">
               <div class="position-relative"
                 style="height: 50px;overflow: hidden;margin-top: -50px;z-index:2;position: relative;">
                 <div class="position-absolute w-100 top-0" style="z-index: 1;">
@@ -459,10 +459,10 @@
               </div>
               <div class="card-body">
                 <h4>
-                  Engin Demiroğ
+                  Serhat Taşçı
                 </h4>
                 <p>
-                  Kodlama.io
+                  Çasgem
 
                 </p>
                 <!-- <a href="javascript:;" class="text-primary icon-move-right">More about us
@@ -475,9 +475,9 @@
 
 
           <div class="col-md-3">
-            <div class="card">
-              <img class="card-img-top"
-                src="https://pbs.twimg.com/profile_images/1404479261566713856/_MklDkhx_400x400.jpg">
+            <div class="card h-100">
+              <img class="card-img-top size"
+                src="https://i.ibb.co/bgzHXdc/43ca8dab-dfe8-4e2a-8e44-f9e0441014be.jpg">
               <div class="position-relative"
                 style="height: 50px;overflow: hidden;margin-top: -50px;z-index:2;position: relative;">
                 <div class="position-absolute w-100 top-0" style="z-index: 1;">
@@ -501,10 +501,10 @@
               </div>
               <div class="card-body">
                 <h4>
-                  Engin Demiroğ
+                  İsmail Karakaya
                 </h4>
                 <p>
-                  Kodlama.io
+                  Çasgem Eğitmen
 
                 </p>
                 <!-- <a href="javascript:;" class="text-primary icon-move-right">More about us
@@ -524,9 +524,9 @@
 
 
 
-<section class="mb-9 mt-7 bg-gradient-light" style="padding: 70px 0;">
+<section class="mb-9 mt-7 bg-gradient-light shadow" style="padding: 70px 0;">
   <div class="container">
-    <h3 class="text-center mb-7">Bootcamp süreci</h3>
+  <a name="bootcampler"><h3 class="text-center mb-7">Bootcamp süreci</h3></a>  
     <div class="row px-1">
 
       <div class="col-4 text-center mt-7 ">
@@ -568,7 +568,7 @@
 
 
 <!-- bootcampler start -->
-<div class="container-fluid">
+<div class="container-fluid ">
   <div class="container mt-5">
     <h1 class="text-center mb-6">Bootcampler</h1>
     <div class="row px-7">
@@ -638,6 +638,125 @@
 
 
 
+
+ <footer class="footer mt-10 bg-gradient-dark">
+  <div class="width">
+    <div class="row">
+      <div class="footer-col">
+        <h4>Navigasyon</h4>
+        <ul>
+          <li><a href="#home">Ana Sayfa</a></li>
+          <li><a href="#bootcampler" >Bootcampler</a></li>
+          <li><a href="#egitmenler">Eğitmenler</a></li>
+          <li><a >Hakkımızda</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Sıkça Sorulanlar</h4>
+        <ul>
+          <li><a>Ödeme Sistemi</a></li>
+          <li><a >Aylık Üyelik</a></li>
+          <li><a >İçerik</a></li>
+          <li><a >Cross-Play</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Bootcampler</h4>
+        <ul>
+          <li><a >Javascript</a></li>
+          <li><a >Angular</a></li>
+          <li><a >Java</a></li>
+          <li><a >C#</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Sosyal Medya</h4>
+        <div class="social-links">
+          <a ><i class="fab fa-facebook-f"></i></a>
+          <a><i class="fab fa-twitter"></i></a>
+          <a ><i class="fab fa-github"></i></a>
+          <a ><i class="fab fa-linkedin"></i></a>
+          <a ><i class="fab fa-medium"></i></a>
+        </div>
+      </div>
+      
+      <h1 class="text-center mt-5 text-light pt-2">© 2022 P41R Çerez Politikası   |   Bu site github projesi olarak &nbsp;&nbsp;<span class="x">PAIR 4 ACADEMY</span>&nbsp;&nbsp; tarafından hazırlanmıştır. </h1>
+      
+    </div>
+  </div>
+ </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ <!-- <footer class="footer bg-gradient-dark mt-10">
+  <div class="container ">
+      <div class="row py-5 fs-5">
+        <div class="col-md-3 text-light text-center">
+          <h4 class="text-white ">Navigasyon</h4>
+          <ul class="link">
+            <li><a >Ana Sayfa</a></li>
+            <li><a >Bootcampler</a></li>
+            <li><a >Eğitmenler</a></li>
+            <li><a >Hakkımızda</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 text-light text-center">
+          <h4 class="text-white">Sıkça Sorulanlar</h4>
+          <ul class="link">
+            <li><a >Bootcamp Ücretleri</a></li>
+            <li><a >Bootcamp Süresi</a></li>
+            <li><a >Bootcamp İçeriği</a></li>
+            <li><a >Nasıl Kayıt yapabilirim ? </a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 text-light text-center">
+          <h4 class="text-white">Tüm Bootcampler</h4>
+          <ul class="link">
+            <li><a >Angular 10</a></li>
+            <li><a >Java </a></li>
+            <li><a > Javascript</a></li>
+            <li><a >C#</a></li>
+          </ul >
+        </div>
+        <div class="col-md-3 text-center">
+          <h4 class="text-white te">Sosyal Medya</h4>
+          <div >
+           
+            <a  class="px-3"><i class="fab fa-facebook-f"></i></a>
+            <a  class="px-3"><i class="fab fa-twitter"></i></a>
+            <a  class="px-3"><i class="fab fa-steam"></i></a>
+            <a  class="px-3"><i class="fab fa-reddit"></i></a>
+          </div>
+        </div>
+      
+        
+      </div>
+    
+  </div>
+  
+ </footer> -->
+
+
+
+
+
+
+<!-- 
   <footer class="footer pt-3  mt-5  bg-gradient-dark ">
     <div class="container">
       <div class="row align-items-center justify-content-lg-between">
@@ -670,4 +789,4 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
