--- a/src/app/layouts/applicant-layouts/applicant-navbar/applicant-navbar.component.html
+++ b/src/app/layouts/applicant-layouts/applicant-navbar/applicant-navbar.component.html
@@ -152,7 +152,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link me-2 text-light fs-6">
+          <a class="nav-link me-2 text-light fs-6" (click)="logout()">
             <i class="fas fa-user-circle opacity-6 text-light me-1"></i>
             Sign Out
           </a>
