--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -1,12 +1,6 @@
 <body class="g-sidenav-show  bg-gray-100">
     <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 " id="sidenav-main">
-      <div class="sidenav-header">
-        <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-        <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/soft-ui-dashboard/pages/dashboard.html " target="_blank">
-          <img src=".\src\app\assets\img\logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
-          <span class="ms-1 font-weight-bold">Soft UI Dashboard</span>
-        </a>
-      </div>
+     
       <hr class="horizontal dark mt-0">
       <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
         <ul class="navbar-nav">
@@ -227,6 +221,17 @@
           </li>
         </ul>
       </div>
+
+      
+
+
+
+
+
+
+
+
+
       <!-- <div class="sidenav-footer mx-3 ">
         <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
           <div class="full-background" style="background-image: url('../assets/img/curved-images/white-curved.jpg')"></div>
@@ -244,5 +249,9 @@
     
       </div> -->
     </aside>
-    <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
+
+
+
+
+    <!-- <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg "> -->
     
