add-carousel&changes

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
             <a class="text-white cursor-pointer">
               <li class="nav-item d-flex align-items-center">
                 <a href="#bootcampler" class="nav-link text-body font-weight-bold">
-                  <span class="d-sm-inline d-none text-light">BOOTCAMPLER </span>
+                  <span class="d-sm-inline d-none text-light tt">BOOTCAMPLER </span>
                 </a>
               </li>
 
@@ -30,7 +30,7 @@
             <a class="text-white cursor-pointer">
               <li class="nav-item d-flex align-items-center">
                 <a href="#egitmenler" class="nav-link text-body font-weight-bold">
-                  <span class="d-sm-inline d-none text-light">EĞİTMENLER </span>
+                  <span class="d-sm-inline d-none text-light tt">EĞİTMENLER </span>
                 </a>
               </li>
 
@@ -42,7 +42,7 @@
             <a class="text-white cursor-pointer">
               <li class="nav-item d-flex align-items-center">
                 <a href="javascript:;" class="nav-link text-body font-weight-bold">
-                  <span class="d-sm-inline d-none text-light">HAKKIMIZDA </span>
+                  <span class="d-sm-inline d-none text-light tt">HAKKIMIZDA </span>
                 </a>
               </li>
 
@@ -57,7 +57,7 @@
               <li class="nav-item d-flex align-items-center">
                 <a routerLink="/home-login" class="nav-link text-body font-weight-bold">
                   <i class="fa fa-user me-sm-1 text-light px-1"></i>
-                  <span class="d-sm-inline d-none text-light">GİRİŞ YAP </span>
+                  <span class="d-sm-inline d-none text-light tt">GİRİŞ YAP </span>
                 </a>
               </li>
 
@@ -68,7 +68,7 @@
               <li class="nav-item d-flex align-items-center">
                 <a routerLink="/home-register" class="nav-link text-body font-weight-bold ">
                   <i class="fa fa-user me-sm-1 text-light px-1 "></i>
-                  <span class="d-sm-inline d-none text-light">KAYIT OL</span>
+                  <span class="d-sm-inline d-none text-light tt">KAYIT OL</span>
                 </a>
               </li>
               <ul class="dropdown-menu dropdown-menu-right px-2 py-3 ms-n4" aria-labelledby="dropdownMenuButton">
@@ -76,12 +76,12 @@
               </ul>
             </div>
           </div>
-          <div class="col-auto ">
+          <!-- <div class="col-auto ">
             <div class="bg-white border-radius-lg d-flex me-2">
               <input type="text" class="form-control border-0 ps-3" placeholder="Arayınız..">
-              <button class="btn bg-gradient-secondary text-light my-1 me-1">Search</button>
+              <button class="btn bg-gradient-secondary text-light my-1 me-1 ">Search</button>
             </div>
-          </div>
+          </div> -->
         </div>
       </ul>
     </div>
@@ -89,8 +89,79 @@
 </nav>
 
 <!-- carousel  -->
+HTML CSSResult Skip Results Iframe
+EDIT ON
+<h1>CSS-only Carousel</h1>
 
-<div class="container ">
+<p>This carousel is created with HTML and CSS only.</p>
+
+<section class="carousel" aria-label="Gallery">
+  <ol class="carousel__viewport">
+    <li id="carousel__slide1"
+        tabindex="0"
+        class="carousel__slide">
+      <div class="carousel__snapper">
+        <a href="#carousel__slide4"
+           class="carousel__prev">Go to last slide</a>
+        <a href="#carousel__slide2"
+           class="carousel__next">Go to next slide</a>
+      </div>
+    </li>
+    <li id="carousel__slide2"
+        tabindex="0"
+        class="carousel__slide">
+      <div class="carousel__snapper"></div>
+      <a href="#carousel__slide1"
+         class="carousel__prev">Go to previous slide</a>
+      <a href="#carousel__slide3"
+         class="carousel__next">Go to next slide</a>
+    </li>
+    <li id="carousel__slide3"
+        tabindex="0"
+        class="carousel__slide">
+      <div class="carousel__snapper"></div>
+      <a href="#carousel__slide2"
+         class="carousel__prev">Go to previous slide</a>
+      <a href="#carousel__slide4"
+         class="carousel__next">Go to next slide</a>
+    </li>
+    <li id="carousel__slide4"
+        tabindex="0"
+        class="carousel__slide">
+      <div class="carousel__snapper"></div>
+      <a href="#carousel__slide3"
+         class="carousel__prev">Go to previous slide</a>
+      <a href="#carousel__slide1"
+         class="carousel__next">Go to first slide</a>
+    </li>
+  </ol>
+  <aside class="carousel__navigation">
+    <ol class="carousel__navigation-list">
+      <li class="carousel__navigation-item">
+        <a href="#carousel__slide1"
+           class="carousel__navigation-button">Go to slide 1</a>
+      </li>
+      <li class="carousel__navigation-item">
+        <a href="#carousel__slide2"
+           class="carousel__navigation-button">Go to slide 2</a>
+      </li>
+      <li class="carousel__navigation-item">
+        <a href="#carousel__slide3"
+           class="carousel__navigation-button">Go to slide 3</a>
+      </li>
+      <li class="carousel__navigation-item">
+        <a href="#carousel__slide4"
+           class="carousel__navigation-button">Go to slide 4</a>
+      </li>
+    </ol>
+  </aside>
+</section>
+
+
+
+
+
+<!-- <div class="container ">
   <div class="row">
     <div class="col-md-12">
 
@@ -320,7 +391,7 @@
 
     </div>
   </div>
-</div>
+</div> -->
 <!-- carousel end  -->
 
 <section class="bg-gradient-light mt-5 shadow" style="padding: 100px 0;">
