--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -94,10 +94,10 @@
     <img src="https://img.freepik.com/free-photo/wide-angle-shot-single-tree-growing-clouded-sky-during-sunset-surrounded-by-grass_181624-22807.jpg" alt="first slide" style="display: block; width: 100%;">
   </slide>
   <slide>
-    <img src="assets/img/curved-images/curved-8.jpg" alt="second slide" style="display: block; width: 100%;">
+    <img src="https://cdn.pixabay.com/photo/2015/12/01/20/28/road-1072823__340.jpg" alt="second slide" style="display: block; width: 100%;">
   </slide>
   <slide>
-    <img src="assets/img/curved-images/curved-10.jpg" alt="third slide" style="display: block; width: 100%;">
+    <img src="https://thumbs.dreamstime.com/b/beautiful-rain-forest-ang-ka-nature-trail-doi-inthanon-national-park-thailand-36703721.jpg" alt="third slide" style="display: block; width: 100%;">
   </slide>
 </carousel>
 <!-- carousel end  -->
