add-last-version

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -91,13 +91,13 @@
 <!-- carousel  -->
 <carousel>
   <slide>
-    <img src="https://img.freepik.com/free-photo/wide-angle-shot-single-tree-growing-clouded-sky-during-sunset-surrounded-by-grass_181624-22807.jpg" alt="first slide" style="display: block; width: 100%;">
+    <img src="https://images.unsplash.com/photo-1537511446984-935f663eb1f4?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1920&amp;q=80" alt="first slide" style="display: block; width: 100%;">
   </slide>
   <slide>
-    <img src="https://cdn.pixabay.com/photo/2015/12/01/20/28/road-1072823__340.jpg" alt="second slide" style="display: block; width: 100%;">
+    <img src="https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1920&amp;q=80'" alt="second slide" style="display: block; width: 100%;">
   </slide>
   <slide>
-    <img src="https://thumbs.dreamstime.com/b/beautiful-rain-forest-ang-ka-nature-trail-doi-inthanon-national-park-thailand-36703721.jpg" alt="third slide" style="display: block; width: 100%;">
+    <img src="https://images.unsplash.com/photo-1552793494-111afe03d0ca?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1920&amp;q=80" alt="third slide" style="display: block; width: 100%;">
   </slide>
 </carousel>
 <!-- carousel end  -->
