--- a/src/app/instructor-components/instructor-add-applicant-blacklist/instructor-add-applicant-blacklist.component.html
+++ b/src/app/instructor-components/instructor-add-applicant-blacklist/instructor-add-applicant-blacklist.component.html
@@ -16,7 +16,7 @@
 
 
       <button (click)="addBlackList()" style="margin-right:15px" type="submit" class="btn btn-warning">Ekle</button>
-      <button type="button" class="btn btn-outline-dark px-3">Geri Dön</button>
+      <button type="button" class="btn btn-outline-dark px-3" routerLink="instructor-applicant-list">Geri Dön</button>
     </form>
   </div>
 </div>
