--- a/src/app/layouts/instructor-layouts/instructor-navbar/instructor-navbar.component.html
+++ b/src/app/layouts/instructor-layouts/instructor-navbar/instructor-navbar.component.html
@@ -25,10 +25,10 @@
           </a>
         </li>
         <li>
-         <a class="nav-link me-2 text-light fs-6" routerLink="instructor-applicant-list">
+          <a class="nav-link me-2 text-light fs-6" routerLink="instructor-applicant-list">
             Aday Listesi
           </a>
-         </li>
+        </li>
         <li class="nav-item">
           <a class="nav-link me-2 text-light fs-6" routerLink="instructor-profile">
             <i class="fa fa-user opacity-6 text-light me-1"></i>
@@ -36,7 +36,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link me-2 text-light fs-6">
+          <a class="nav-link me-2 text-light fs-6" (click)="logout()" style="cursor: pointer;">
             <i class="fas fa-user-circle opacity-6 text-light me-1"></i>
             Sign Out
           </a>
