--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -76,12 +76,12 @@
               </ul>
             </div>
           </div>
-          <!-- <div class="col-auto ">
+          <div class="col-auto ">
             <div class="bg-white border-radius-lg d-flex me-2">
               <input type="text" class="form-control border-0 ps-3" placeholder="Arayınız..">
               <button class="btn bg-gradient-secondary text-light my-1 me-1 ">Search</button>
             </div>
-          </div> -->
+          </div>
         </div>
       </ul>
     </div>
