--- a/src/app/components/applicant/create-applicant/create-applicant.component.html
+++ b/src/app/components/applicant/create-applicant/create-applicant.component.html
@@ -1,4 +1,13 @@
 
+     <div class="col-auto ">
+      <div class="bg-white border-radius-lg d-flex me-2">
+        <input type="text" class="form-control border-0 ps-3" [(ngModel)]="filterApplicant" [ngModelOptions]="{standalone:true}"  placeholder="Arayınız..">
+        <button class="btn bg-gradient-secondary text-light my-1 me-1 ">Search</button>
+      </div>
+    </div> 
+ 
+ 
+ 
  <div class="container-fluid py-4"> 
   <div class="row">
     <div class="col-12">
@@ -28,7 +37,7 @@
                   <th class="text-secondary opacity-7"></th>
                 </tr>
               </thead>
-              <tbody *ngFor="let applicant of applicants" class="text-center">
+              <tbody *ngFor="let applicant of applicants |applicantList:filterApplicant" class="text-center">
                 <tr>
                   <td>
                     <div class="d-flex px-2 py-1">
